@@ -1,0 +1,11 @@
+REM ---------------------------------------------------------------------------
+REM This script read version string from a file by calling semver.exe
+REM Then set the version string to VERSION_STR envirament veriable
+REM Usage:
+REM   semverenv.bat file
+REM   semverenv.bat -s file
+REM Pre-request, put semver.exe  
+REM ---------------------------------------------------------------------------
+SET semver_get_str=call semver -g %1 %2
+FOR /F "usebackq tokens=2*" %%i IN (`%semver_get_str% ^| findstr /r "^\Input"`) DO  SET VERSION_STR=%%j
+ECHO %VERSION_STR%
