@@ -1,5 +1,10 @@
+[x.x.x]
+-- add semverenv.bat script
+-- Generate major, minor, patch number in version file
+
 [0.11.1]
 -- Fix issue: there would be extra gcov information under linux
+
 [0.11.0]
 -- User can specify the version name
 -- Include modify date in version file is optional
